# androbot

./: .env_example  .gitignore  .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml  setup.cfg  welcome.message
.github/workflows/: ci.yml  python-app.yml
androbot/: __init__.py  actions.py  androbot_types.py  backend.py  config.py  crud.py  database.py  error_handlers.py  errors.py  event_types.py  handlers.py  handles.py  load_questions.py  main.py  models.py  schemas.py  specialty.py  states.py  states_.py  templates.py  tests.py  types.py  utils.py  views.py
androbot/types/: answerType.py  category.py  event_types.py  specialty.py  states_.py
androbot/types_/: __init__.py  answer.py  category_.py  event.py  specialty.py  state.py  user_score.py  views.py
docker/: Dockerfile
questions/: androbot_questions.csv
templates/: 01_hello.md  02_start.md  03_do_you_want_to_reset_test.md  04_resetting_test.md  04_select_answer_type.md  05_select_answer_type.md  09_are_you_ready_for_test.md  20_question.md  30_do_not_understand.md  31_still_not_understand.md  31_why_do_not_understand.md  40_correct_answer.md  40_no_correct_answer.md  41_correct_answer.md  41_do_you_want_to_get_correct_answer.md  42_do_you_want_additional_materials.md  46_additional_materials.md  51_user_score.md  52_result_excelent.md  53_result_good.md  54_result_bad.md  55_bot_score.md  56_bot_review.md  60_finish.md  android_developer.md  call_to_answer.md  correct_answer.md  do_not_understand.md  hello.md  question.md  select_answer_type.md  start.md  why_do_not_understand.md
